feat: exam pages add

--- a/CANADA.html
+++ b/CANADA.html
@@ -6,7 +6,7 @@
     <title>USA</title>
     <link rel="stylesheet" href="./USA.css" />
     <meta name="viewport" content="width= device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="USA.css" />
+    <link rel="stylesheet" href="CANADA.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&family=Lato:wght@100;300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet">
@@ -144,51 +144,40 @@
     <main>
         <div class="container1">
             <img src="./USA.assets/USA.svg" class="background" alt="secondphoto" />
-            <h2 class="stusa">Study in USA</h2>
+            <h2 class="stusa">Study in Canada</h2>
         </div>
         <div class="container2">
-            <h2 class="titles1">Why Study in USA ?</h2>
-            <p>Studying in the USA offers an unparalleled opportunity to engage with one of the
-                world's most esteemed higher education systems. It provides access to state-of-the-art technology
-                and cutting-edge research, creating an immersive and collaborative learning experience. With a vast
-                array of schools, diverse study disciplines, and niche qualifications not readily available
-                elsewhere, the USA offers academic choices tailored to your career aspirations. What sets it apart
-                is the flexibility of the education system, allowing you to apply to various programs aligned with
-                your academic and professional goals. Graduating from the USA equips you with a global perspective
-                and practical skills essential for the future.</p>
+            <h2 class="titles1">Why Study in CANADA?</h2>
+            <p>Enroll in a nation that has experienced an impressive threefold rise in its international student population over the past decade. This growth can be attributed to its world-renowned universities offering exceptional education, highly practical programs that prioritize hands-on learning, and some of the most affordable tuition fees among English-speaking countries. Enjoy an exceptional quality of life in the highly livable cities of Vancouver and Toronto while also taking advantage of career advancement opportunities in one of the world's most resource-rich, industrialized, and stable economies. This nation provides a welcoming environment for students seeking a top-tier education and a bright future in a diverse and dynamic setting.
+            </p>
             <img src="./USA.assets/Content.png" alt="2ndphoto" class="discuss" />
             <h2 class="titles2">Career and Industry Insights</h2>
-            <p>In the USA, a global economic powerhouse, diverse and promising career opportunities
-                abound across multiple industries. Technology and IT fields continue to flourish, with Silicon
-                Valley leading the charge in innovation. Healthcare and biotechnology sectors offer substantial
-                growth, ensuring a demand for skilled professionals. Additionally, finance and banking hubs like New
-                York City provide lucrative prospects for finance graduates. Manufacturing and engineering sectors
-                remain robust, with a focus on sustainability and innovation. The entertainment industry in
-                Hollywood fuels creative careers, while the green energy sector grows, emphasizing environmental
-                sustainability. With a dynamic job market and a penchant for innovation, the USA stands as a beacon
-                for ambitious professionals seeking diverse and rewarding career paths.</p>
+            <p>Canada offers a diverse landscape of career opportunities within a robust and thriving economy. Key sectors driving its prosperity include Agriculture, Energy, Technology, Manufacturing, and Services. International students and job seekers have a wide array of career options in Engineering, Construction, IT, Healthcare, Law, and Banking & Finance. Notably, Canada's job market consistently outpaces its population growth, ensuring abundant prospects for those seeking employment. The country's commitment to a high standard of living extends to all residents, making it an attractive destination for those in pursuit of both career advancement and an exceptional quality of life. In Canada, the potential for professional growth and personal well-being intersect, making it an appealing choice for individuals looking to build a promising future.
+            </p>
         </div>
         <div class="container3">
             <div class="MISSION">
                 <h2 class="title">Facts</h2>
                 <ul class="list1">
                     <li><img class="tick" src="./assets/Tick.svg" alt="">
-                        <p class="subcontent">Excellence in Research & Innovation</p>
+                        <p class="subcontent">High Education Standards And Low Cost Of Education
+                        </p>
                     </li>
                     <li><img class="tick" src="./assets/Tick.svg" alt="">
-                        <p class="subcontent">Flexible Academic Environment</p>
+                        <p class="subcontent">Sds (student Direct Stream) By Government Of Canada
+                        </p>
                     </li>
                     <li><img class="tick" src="./assets/Tick.svg" alt="">
-                        <p class="subcontent">Excellent career opportunities</p>
+                        <p class="subcontent">Post Study Work Permit</p>
                     </li>
                     <li><img class="tick" src="./assets/Tick.svg" alt="">
-                        <p class="subcontent">World class Education institutions</p>
+                        <p class="subcontent"> Apply For Permanent Residence On Eligibility</p>
                     </li>
                     <li><img class="tick" src="./assets/Tick.svg" alt="">
                         <p class="subcontent">20hrs/week work along-side study</p>
                     </li>
                     <li><img class="tick" src="./assets/Tick.svg" alt="">
-                        <p class="subcontent">18 month post Study work visa</p>
+                        <p class="subcontent">Innovative And Abundant Research Options</p>
                     </li>
                 </ul>
 
