--- a/Ourservices.html
+++ b/Ourservices.html
@@ -37,8 +37,10 @@
 
             <div class="dropdown-content">
               <a href="./USA.html">USA</a>
-              <a href="#">UK</a>
-              <a href="#">Canada</a>
+              <a href="./UK.html">UK</a>
+              <a href="./CANADA.html">CANADA</a>
+              <a href="./AUSTRALIA.html">AUSTRALIA</a>
+              <a href="./Restoftheworld.html">REST of the World</a>
             </div>
           </div>
         </li>
@@ -50,11 +52,12 @@
 
             <div class="dropdown-content">
               <a href="./IELTS.html">IELTS</a>
-              <a href="#">TOEFL</a>
-              <a href="#">GRE</a>
-              <a href="#">GMAT</a>
-              <a href="#">SAT</a>
-              <a href="#">PTE</a>
+              <a href="./TOEFL.html">TOEFL</a>
+              <a href="./GRE.html">GRE</a>
+              <a href="./GMAT.html">GMAT</a>
+              <a href="./SAT.html">SAT</a>
+              <a href="./PTE.html">PTE</a>
+              <a href="./ACT.html">ACT</a>
             </div>
           </div>
         </li>
@@ -278,7 +281,7 @@
               <p>2 Ardmore Pl, East Brunswick, NJ 08816 New Jersey</p>
               <img src="./ourservice.assets/phone.png" alt="icon2" class="icon2" />
               <h3 class="no1">+91 87120 33666</h3>
-              <img src="./ourservice.assets/map.png" alt="map" class="map1" />
+              <a href="https://www.google.com/maps/place/2+Ardmore+Pl,+East+Brunswick,+NJ+08816,+USA/@40.3945878,-74.4319518,17z/data=!3m1!4b1!4m6!3m5!1s0x89c3c5389ee0c489:0xb3bc077536ebccd8!8m2!3d40.3945837!4d-74.4293769!16s%2Fg%2F11t770hdjy?entry=ttu" ><img src="./ourservice.assets/map.png" alt="map" class="map1" /></a>
             </div>
           </div>
           <div class="card2">
@@ -288,7 +291,7 @@
               <p>Flat No: 201 Santhi Classic Apartments HUDA Trade Centre Lingampally Hyderabad Telangana 500019</p>
               <img src="./ourservice.assets/phone.png" alt="icon2" class="icon4" />
               <h3 class="no2">+91 90000 92929</h3>
-              <img src="./ourservice.assets/map.png" alt="map" class="map2" />
+              <a href="https://www.google.com/maps/search/Flat+No:+201+Santhi+Classic+Apartments+HUDA+Trade+Centre+Lingampally+Hyderabad+Telangana+500019/@17.4839015,78.3113032,17z/data=!3m1!4b1?entry=ttu" ><img src="./ourservice.assets/map.png" alt="map" class="map2" /></a>
             </div>
           </div>
           <div class="card3">
@@ -298,7 +301,7 @@
               <p>2-43-46/1 Bhaskar Nagar Endowment Colony 50 building center Kakinada</p>
               <img src="./ourservice.assets/phone.png" alt="icon2" class="icon6" />
               <h3 class="no3">+91 97017 13888</h3>
-              <img src="./ourservice.assets/map.png" alt="map" class="map3" />
+              <a href="https://www.google.com/maps/search/2-43-46%2F1+Bhaskar+Nagar+Endowment+Colony+50+building+center+Kakinada/@16.9628936,82.2269384,15z/data=!3m1!4b1?entry=ttu"><img src="./ourservice.assets/map.png" alt="map" class="map3" /></a>
             </div>
           </div>
         </div>
@@ -308,36 +311,25 @@
     <section>
       <div class="container11">
         <div class="left-column">
-          <div class="contact-heading">
-            <p class="banner-yel">REACH US</p>
-            <h2 class="title">
-              Contact Us. It's Easy.
-            </h2>
-            <p class="contact-content">Interested in studying abroad? We're here to help! Share your details in the
-              form,
-              and our expert consultants will reach out to guide you through the process.</p>
+         <div class="contact-heading"> <p class="banner-yel">REACH US</p>
+          <h2 class="title">
+            Contact Us.It's Easy.
+          </h2>
+          <p class="contact-content">Interested in studying abroad? We're here to help! Share your details in the form,
+            and our expert consultants will reach out to guide you through the process.</p>
           </div>
-          <ul class="contact-links">
-            <li class="contact-me"><img src="./ourservice.assets/contact1.png" alt="contact1" class="contact" />
-              <div class="contact-me-info">
-                <p>Call us today</p>
-                <p><strong>+91 8712033666</strong></p>
-              </div>
-            </li>
-            <li class="contact-me"><img src="./ourservice.assets/contact2.png" alt="contact2" class="contact" />
-              <div class="contact-me-info">
-                <p>Mail us </p>
-                <p><strong>studyabroad@neemtree.org.in</strong></p>
-              </div>
-            </li>
-            <li class="contact-me"><img src="./ourservice.assets/contact3.png" alt="contact3" class="contact" />
-              <div class="contact-me-info">
-                <p>Instagram</p>
-                <p><strong>neemtreestudyabroadexperts</strong></p>
-              </div>
-            </li>
-          </ul>
-
+            <ul class="contact-links">
+              <li class="contact-me"><img src="./ourservice.assets/contact1.png" alt="contact1" class="contact" />
+                <div class="contact-me-info"><p>Call us today</p><p><strong>+91 8712033666</strong></p></div>
+              </li>
+              <li class="contact-me"><img src="./ourservice.assets/contact2.png" alt="contact2" class="contact" />
+                <div class="contact-me-info"><p>Mail us </p><p><strong>studyabroad@neemtree.org.in</strong></p></div>
+              </li>
+              <li class="contact-me"><img src="./ourservice.assets/contact3.png" alt="contact3" class="contact" />
+                <div class="contact-me-info"><p>Instagram</p><p><strong>neemtreestudyabroadexperts</strong></p></div>
+              </li>
+            </ul>
+            
         </div>
         <div class="right-column">
           <form class="contact-form" id="contactForm">
@@ -348,8 +340,7 @@
               </div>
               <div class="col-md-6">
                 <label class="email">Email</label>
-                <input type="text" id="email" name="email" class="form-control" placeholder="consult@mail.com"
-                  required />
+                <input type="text" id="email" name="email" class="form-control" placeholder="consult@mail.com" required />
               </div>
             </div>
             <div class="row">
@@ -366,21 +357,19 @@
               <div class="col-md-12">
                 <label class="message">Message</label>
                 <textarea id="message" name="message" class="form-control"
-                  placeholder="Briefly tell us about your project and your current goals. How can we help you?"
-                  required></textarea>
+                  placeholder="Briefly tell us about your project and your current goals. How can we help you?" required></textarea>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <button type="submit" value="Submit" class="btn btn-primary send SendButton" id="SEND"
-                  onclick="submitForm()">
+                <button type="submit" class="btn btn-primary send SendButton" id="SENDD">
                   <p>Send Message</p>
                 </button>
               </div>
             </div>
           </form>
         </div>
-
+        
       </div>
     </section>
 
