--- a/about.html
+++ b/about.html
@@ -38,8 +38,10 @@
 
             <div class="dropdown-content">
               <a href="./USA.html">USA</a>
-              <a href="#">UK</a>
-              <a href="#">Canada</a>
+              <a href="./UK.html">UK</a>
+              <a href="./CANADA.html">CANADA</a>
+              <a href="./AUSTRALIA.html">AUSTRALIA</a>
+              <a href="./Restoftheworld.html">REST of the World</a>
             </div>
           </div>
         </li>
@@ -51,11 +53,12 @@
 
             <div class="dropdown-content">
               <a href="./IELTS.html">IELTS</a>
-              <a href="#">TOEFL</a>
-              <a href="#">GRE</a>
-              <a href="#">GMAT</a>
-              <a href="#">SAT</a>
-              <a href="#">PTE</a>
+              <a href="./TOEFL.html">TOEFL</a>
+              <a href="./GRE.html">GRE</a>
+              <a href="./GMAT.html">GMAT</a>
+              <a href="./SAT.html">SAT</a>
+              <a href="./PTE.html">PTE</a>
+              <a href="./ACT.html">ACT</a>
             </div>
           </div>
         </li>
