fix: all  pages content fix

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           include career counseling, university selection, admissions, scholarships, visa support, and more. As
           authorized Test Registration Centers for IELTS, we're proud members of the World Education Association.
         </p>
-        <button class="btn2"> Discover more</button>
+        <button class="btn2"> <a href="Ourservices.html">Discover more</button></a>
       </div>
       <img src="assets/about_img.svg" class="AU">
     </div>
@@ -236,6 +236,10 @@
             </div>
           </div>
         </div>
+        <img src="./assets/Greenbg.svg" Alt="Green Background" class="Green-Background"/>
+        <img src="./assets/greenbg2.svg" Alt="Green Background2" class="Green-Background2"/>
+        <img src="./assets/SDpattern.svg" Alt="SDP" class="SDP"/>
+        <img src="./assets/SDpattern.svg" Alt="SDP" class="SDP2"/>
       </div>
     </section>
 
