fix: footer styles fix

--- a/IELTS.html
+++ b/IELTS.html
@@ -126,6 +126,7 @@
           <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">GMAT</label></div>
 
           <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">SAT</label></div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">ACT</label></div>
 
           <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">No preference</label>
           </div>
@@ -529,13 +530,13 @@
           <nav class="footer-nav">
             <h3 class="link-head">Quick Links</h3>
             <ul aria-label="Footer" role="list" class="link-list">
-              <li><a href="#">About Us</a></li>
+              <li><a href="./Ourservices.html">About Us</a></li>
               <li><a href="#">Study Destinations</a></li>
               <li><a href="#">Test Preparation</a></li>
-              <li><a href="#">What we provide</a></li>
-              <li><a href="#">Our Services</a></li>
+              <li><a href="./about.html">What we provide</a></li>
+              <li><a href="./about.html">Our Services</a></li>
               <li><a href="#">Contact us</a></li>
-              <li><a href="#">Book free consultation</a></li>
+              <li><a href="#" onclick="openPopup()">Book free consultation</a></li>
             </ul>
           </nav>
         </div>
@@ -544,11 +545,11 @@
           <nav class="footer-nav">
             <h3 class="link-head">Study Destinations</h3>
             <ul aria-label="Footer" role="list" class="link-list">
-              <li><a href="#">USA</a></li>
-              <li><a href="#">UK</a></li>
-              <li><a href="#">Canada</a></li>
-              <li><a href="#">Australia</a></li>
-              <li><a href="#">Rest of the world</a></li>
+              <li><a href="./USA.html">USA</a></li>
+              <li><a href="./UK.html">UK</a></li>
+              <li><a href="./CANADA.html">Canada</a></li>
+              <li><a href="./AUSTRALIA.html">Australia</a></li>
+              <li><a href="./Restoftheworld.html">Rest of the world</a></li>
             </ul>
           </nav>
         </div>
@@ -557,12 +558,13 @@
           <nav class="footer-nav">
             <h3 class="link-head">Test Preparation</h3>
             <ul aria-label="Footer" role="list" class="link-list">
-              <li><a href="#">IELTS</a></li>
-              <li><a href="#">TOEFL</a></li>
-              <li><a href="#">PTE</a></li>
-              <li><a href="#">GRE</a></li>
-              <li><a href="#">GMAT</a></li>
-              <li><a href="#">SAT</a></li>
+              <li><a href="./IELTS.html">IELTS</a></li>
+              <li><a href="./TOEFL.html">TOEFL</a></li>
+              <li><a href="./PTE.html">PTE</a></li>
+              <li><a href="./GRE.html">GRE</a></li>
+              <li><a href="./GMAT.html">GMAT</a></li>
+              <li><a href="./SAT.html">SAT</a></li>
+              <li><a href="./ACT.html">ACT</a></li>
             </ul>
           </nav>
         </div>
