--- a/TOEFL.html
+++ b/TOEFL.html
@@ -115,28 +115,20 @@
           <h2 class="popup-heading">Book Free Consultation</h2>
           <p class="popup-subheading">Exam(s) you are planning to take (Multiple checks)</p>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">IELTS</label>
-          </div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">IELTS</label></div>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">TOEFL</label>
-          </div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">TOEFL</label></div>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">PTE</label>
-          </div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">PTE</label></div>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">GRE</label>
-          </div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">GRE</label></div>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">GMAT</label>
-          </div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">GMAT</label></div>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">SAT</label>
-          </div>
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">ACT</label>
-          </div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">SAT</label></div>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">ACT</label></div>
 
-          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">No
-              preference</label>
+          <div class="checkdiv"><input type="checkbox" class="ielts" /><label class="form-label">No preference</label>
           </div>
           <button type="button" id="book" class="form-button book-button" onclick="submitForm()">BOOK</button>
         </div>
@@ -155,6 +147,7 @@
 
     </div>
   </div>
+
 
   <main>
     <div class="container1">
@@ -481,18 +474,14 @@
         <div class="col-md-3 col-sm-6 agency-info">
           <div class="agency-top">
             <a href="home.html"><img src="assets/NT_logo.svg" class="nt-logo"></a>
-            <p class="agency-text">Some footer text about the Agency. Just a little description to help
-              people
+            <p class="agency-text">Some footer text about the Agency. Just a little description to help people
               understand you better.</p>
           </div>
           <div class="agency-down">
             <ul role="list" class="media-layout">
-              <li><a aria-label="Facebook" href="#" class="media-icons"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li><a aria-label="Twitter" href="#" class="media-icons"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li><a aria-label="LinkedIn" href="#" class="media-icons"><i class="fa fa-linkedin"></i></a>
-              </li>
+              <li><a aria-label="Facebook" href="#" class="media-icons"><i class="fa fa-facebook"></i></a></li>
+              <li><a aria-label="Twitter" href="#" class="media-icons"><i class="fa fa-twitter"></i></a></li>
+              <li><a aria-label="LinkedIn" href="#" class="media-icons"><i class="fa fa-linkedin"></i></a></li>
               <li><a aria-label="Instagram" href="#" class="media-icons"><i class="fa fa-instagram"></i></a></li>
             </ul>
             <p class="copy-text">Copyright 2023 NEEMTREE, All rights reserved.</p>
@@ -503,13 +492,13 @@
           <nav class="footer-nav">
             <h3 class="link-head">Quick Links</h3>
             <ul aria-label="Footer" role="list" class="link-list">
-              <li><a href="#">About Us</a></li>
+              <li><a href="./Ourservices.html">About Us</a></li>
               <li><a href="#">Study Destinations</a></li>
               <li><a href="#">Test Preparation</a></li>
-              <li><a href="#">What we provide</a></li>
-              <li><a href="#">Our Services</a></li>
+              <li><a href="./about.html">What we provide</a></li>
+              <li><a href="./about.html">Our Services</a></li>
               <li><a href="#">Contact us</a></li>
-              <li><a href="#">Book free consultation</a></li>
+              <li><a href="#" onclick="openPopup()">Book free consultation</a></li>
             </ul>
           </nav>
         </div>
@@ -518,11 +507,11 @@
           <nav class="footer-nav">
             <h3 class="link-head">Study Destinations</h3>
             <ul aria-label="Footer" role="list" class="link-list">
-              <li><a href="#">USA</a></li>
-              <li><a href="#">UK</a></li>
-              <li><a href="#">Canada</a></li>
-              <li><a href="#">Australia</a></li>
-              <li><a href="#">Rest of the world</a></li>
+              <li><a href="./USA.html">USA</a></li>
+              <li><a href="./UK.html">UK</a></li>
+              <li><a href="./CANADA.html">Canada</a></li>
+              <li><a href="./AUSTRALIA.html">Australia</a></li>
+              <li><a href="./Restoftheworld.html">Rest of the world</a></li>
             </ul>
           </nav>
         </div>
@@ -531,12 +520,13 @@
           <nav class="footer-nav">
             <h3 class="link-head">Test Preparation</h3>
             <ul aria-label="Footer" role="list" class="link-list">
-              <li><a href="#">IELTS</a></li>
-              <li><a href="#">TOEFL</a></li>
-              <li><a href="#">PTE</a></li>
-              <li><a href="#">GRE</a></li>
-              <li><a href="#">GMAT</a></li>
-              <li><a href="#">SAT</a></li>
+              <li><a href="./IELTS.html">IELTS</a></li>
+              <li><a href="./TOEFL.html">TOEFL</a></li>
+              <li><a href="./PTE.html">PTE</a></li>
+              <li><a href="./GRE.html">GRE</a></li>
+              <li><a href="./GMAT.html">GMAT</a></li>
+              <li><a href="./SAT.html">SAT</a></li>
+              <li><a href="./ACT.html">ACT</a></li>
             </ul>
           </nav>
         </div>
